// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListEntries rendering renders expected elements 1`] = `
<React.Fragment>
  <div
    aria-live="polite"
    className="sr-only"
  />
  <ul
    className="ListEntries ListEntries--grid TestClass"
    id="random-id"
    onClick={[Function]}
  >
    <li
      className="ListEntries__listItem"
      data-index={0}
      data-testid="list-item"
    >
      <Layer
        className="ListEntries__item"
      >
        <div
          className="ListEntries__name"
        >
          test
        </div>
        <button
          aria-label="Remove test"
          className="ListEntries__icon"
          data-index={0}
          data-testid="remove-item"
          type="button"
        >
          <Close />
        </button>
      </Layer>
    </li>
  </ul>
</React.Fragment>
`;

exports[`ListEntries rendering renders expected elements when column is set 1`] = `
<React.Fragment>
  <div
    aria-live="polite"
    className="sr-only"
  />
  <ul
    className="ListEntries ListEntries--column"
    id="random-id"
    onClick={[Function]}
  >
    <li
      className="ListEntries__listItem"
      data-index={0}
      data-testid="list-item"
    >
      <Layer
        className="ListEntries__item"
      >
        <div
          className="ListEntries__name"
        >
          test
        </div>
        <button
          aria-label="Remove test"
          className="ListEntries__icon"
          data-index={0}
          data-testid="remove-item"
          type="button"
        >
          <Close />
        </button>
      </Layer>
    </li>
  </ul>
</React.Fragment>
`;

exports[`ListEntries rendering renders expected elements when highlightKey is set 1`] = `
<React.Fragment>
  <div
    aria-live="polite"
    className="sr-only"
  />
  <ul
    className="ListEntries ListEntries--grid"
    id="random-id"
    onClick={[Function]}
  >
    <li
      className="ListEntries__listItem"
      data-index={0}
      data-testid="list-item"
    >
      <Layer
        className="ListEntries__item ListEntries__item--highlight"
      >
        <div
          className="ListEntries__name"
        >
          test
        </div>
        <button
          aria-label="Remove test"
          className="ListEntries__icon"
          data-index={0}
          data-testid="remove-item"
          type="button"
        >
          <Close />
        </button>
      </Layer>
    </li>
  </ul>
</React.Fragment>
`;

exports[`ListEntries rendering renders expected elements when renderItem is not set 1`] = `
<React.Fragment>
  <div
    aria-live="polite"
    className="sr-only"
  />
  <ul
    className="ListEntries ListEntries--grid"
    id="random-id"
    onClick={[Function]}
  >
    <li
      className="ListEntries__listItem"
      data-index={0}
      data-testid="list-item"
    >
      <Layer
        className="ListEntries__item"
      >
        <div
          className="ListEntries__name"
        >
          test
        </div>
        <button
          aria-label="Remove test"
          className="ListEntries__icon"
          data-index={0}
          data-testid="remove-item"
          type="button"
        >
          <Close />
        </button>
      </Layer>
    </li>
  </ul>
</React.Fragment>
`;

exports[`ListEntries rendering renders expected elements when reorderable is numbers 1`] = `
<React.Fragment>
  <div
    aria-live="polite"
    className="sr-only"
  />
  <div
    className="sr-only"
    id="random-id-operation"
  >
    Press space bar to reorder
  </div>
  <ol
    className="ListEntries ListEntries--column numbers"
    id="random-id"
    onClick={[Function]}
  >
    <li
      aria-describedby="random-id-operation"
      className="ListEntries__listItem"
      data-index={0}
      data-testid="list-item"
      tabIndex={0}
    >
      <Layer
        className="ListEntries__item"
      >
        <div
          className="ListEntries__entry draggable"
        >
          <Draggable
            className="ListEntries__grip"
          />
          <div
            className="ListEntries__name"
          >
            test
          </div>
        </div>
        <button
          aria-label="Remove test"
          className="ListEntries__icon"
          data-index={0}
          data-testid="remove-item"
          type="button"
        >
          <Close />
        </button>
      </Layer>
    </li>
  </ol>
</React.Fragment>
`;

exports[`ListEntries rendering renders expected elements when reorderable is set 1`] = `
<React.Fragment>
  <div
    aria-live="polite"
    className="sr-only"
  />
  <div
    className="sr-only"
    id="random-id-operation"
  >
    Press space bar to reorder
  </div>
  <ol
    className="ListEntries ListEntries--column"
    id="random-id"
    onClick={[Function]}
  >
    <li
      aria-describedby="random-id-operation"
      className="ListEntries__listItem"
      data-index={0}
      data-testid="list-item"
      tabIndex={0}
    >
      <Layer
        className="ListEntries__item"
      >
        <div
          className="ListEntries__entry draggable"
        >
          <Draggable
            className="ListEntries__grip"
          />
          <div
            className="ListEntries__name"
          >
            test
          </div>
        </div>
        <button
          aria-label="Remove test"
          className="ListEntries__icon"
          data-index={0}
          data-testid="remove-item"
          type="button"
        >
          <Close />
        </button>
      </Layer>
    </li>
  </ol>
</React.Fragment>
`;

exports[`ListEntries rendering renders expected elements when the item has className 1`] = `
<React.Fragment>
  <div
    aria-live="polite"
    className="sr-only"
  />
  <ul
    className="ListEntries ListEntries--grid"
    id="random-id"
    onClick={[Function]}
  >
    <li
      className="ListEntries__listItem"
      data-index={0}
      data-testid="list-item"
    >
      <Layer
        className="ListEntries__item"
      >
        <div
          className="TestClass ListEntries__name"
        >
          test
        </div>
        <button
          aria-label="Remove test"
          className="ListEntries__icon"
          data-index={0}
          data-testid="remove-item"
          type="button"
        >
          <Close />
        </button>
      </Layer>
    </li>
  </ul>
</React.Fragment>
`;
